--- a/index.html
+++ b/index.html
@@ -9,65 +9,70 @@
             <div class="input-group">
                 <label for="firstName">First Name</label>
                 <input type="text" id="firstName" required>&nbsp;&nbsp;&nbsp;
-                <span class="span-for-errors" id="errorfn">Enter First Name</span><br/><br/>
+                <span class="span-for-errors" id="errorfn">*Enter First Name</span><br/><br/>
             </div>
             <div class="input-group">
                 <label for="lastName">Last Name</label>
                 <input type="text" id="lastName" required>
-                <span class="span-for-errors" id="errorln">Enter Last Name</span><br/><br/>
-               
+                <span class="span-for-errors" id="errorln">*Enter Last Name</span><br/><br/>
             </div>
             <div>
                 <label for="designation">Designation</label>
-                <select id="designation" required>
-                        <option value="" selected disabled hidden>Choose here</option>
+                <select id="designation">
+                    <option value="" selected disabled hidden>Choose here</option>
                     <option value="Associate Engineer" checked>New Employee</option>
                     <option value="Systems analyst">Lost</option>
                     <option value="Network engineer">Defaced</option>
                     <option value="software architect">Conversion</option>
                     <option value="Software tester">Designation Change</option>
                   </select> 
-                <span class="span-for-errors" id="errorde">Enter your Designation</span><br/><br/>                
+                <span class="span-for-errors" id="errorde">*Enter your Designation</span><br/><br/>                
             </div>
             <div>
-                <label for="emp_no">Employee Number</label>
-                <input type="text" id="emp_no" required pattern="[0-9]">
-                <span class="span-for-errors" id="erroren">Enter valid employee number</span><br/><br/> 
+                <label for="emp_code">Employee Code</label>
+                <input type="text" id="emp_code">
+                <span class="span-for-errors" id="erroren">*Enter valid Employee Code</span><br/><br/> 
             </div>
             <div>
-                <label for="blood">Employee Number</label>
+                <label for="blood">Blood group</label>
                 <input type="radio" id="A+" name="blood" value="A+" checked>A+
                 <input type="radio" id="B+" name="blood" value="B+" >B+
                 <input type="radio" id="O+" name="blood" value="O+" >O+
                 <input type="radio" id="AB-" name="blood" value="AB-" >AB-
-                <span class="span-for-errors" id="errorln">select your blood group</span><br/><br/> 
+                <span class="span-for-errors" id="errorln">*Select your blood group</span><br/><br/> 
             </div>
             <div>
                 <label for="issues">Reasons for Issues</label>
                 <select >
-                        <option value="" selected disabled hidden>Choose here</option>
+                    <option value="" selected disabled hidden>Choose here</option>
                     <option value="New Employee" checked>New Employee</option>
                     <option value="Lost">Lost</option>
                     <option value="Defaced">Defaced</option>
                     <option value="Conversion">Conversion</option>
                     <option value="Designation Change">Designation Change</option>
-                  </select> 
+                </select> 
+                <span class="span-for-errors" id="errorde">*Enter your Designation</span><br/>
             </div><br>
-           
             <div>
-                    <label for="email">Email ID(Virtusa)</label>
-                    <input type="text" id="email" required>
+                <label for="doj">Date of joining</label>
+                <input type="date" id="doj" required>
+                <span class="span-for-errors" id="erroren">*Enter valid employee number</span><br/><br/> 
+            </div>
+            <div>
+                <label for="email">Email ID(Virtusa)</label>
+                <input type="text" id="email" required>
+                <span class="span-for-errors" id="errormail">*Enter valid Email Id</span><br/>
 
             </div><br>
             <div>
-                    <label for="mobile">Employee Mobile Number</label>
-                    <input type="text" id="mobile" required>
-
+                <label for="mobile">Employee Mobile Number</label>
+                <input type="text" id="mobile" required>
+                <span class="span-for-errors" id="errornum">*Enter valid Mobile number</span><br/>
             </div><br>
             <div>
-                    <label for="emergency">Emergency Contact Number</label>
-                    <input type="text" id="emergency" required>
-
+                <label for="emergency">Emergency Contact Number</label>
+                <input type="text" id="emergency" required>
+                <span class="span-for-errors" id="errornum">*Enter valid Contact number</span><br/>
             </div>
 
 
